# Robotics

./: .gitattributes  mppi.cpp
April_Tag_follower/: CMakeLists.txt  package.xml
April_Tag_follower/launch/: turtlebot3_auto_drive.launch
April_Tag_follower/nodes/: auto_drive.py
Camera-mosaic/matlab/: cinderblock.m  mural1.m  mural2.m
Car Parking using RL/: PPO_RL_Project.ipynb  SAC.ipynb
Extended Kalman Filter/: extended_kalman.py
OMPL_Trajector_planner/: karto_planner.cpp
ROS-IMU/src/: readme
ROS-IMU/src/analysis/: lab3analysis.ipynb
ROS-IMU/src/imu_driver/: CMakeLists.txt  package.xml
ROS-IMU/src/imu_driver/launch/: driver.launch
ROS-IMU/src/imu_driver/msg/: imu_msg.msg
ROS-IMU/src/imu_driver/python/: driver.py
ROS-RTK_GPS/src/: readme
ROS-RTK_GPS/src/analysis/: lab2_graphing.ipynb
ROS-RTK_GPS/src/gnss_package/: CMakeLists.txt  package.xml
ROS-RTK_GPS/src/gnss_package/launch/: driver.launch
ROS-RTK_GPS/src/gnss_package/msg/: gnss_msg.msg
ROS-RTK_GPS/src/gnss_package/python/: gnss_driver.py
ROS-car-imu-magnetometer/analysis/: circle_analysis_L4.ipynb  path_analysis_L4.ipynb
ROS_turtlebot3_exploration/turtlebot3_exploration/nodes/: mppi.py
ROS_with_GPS/src/: Readme
ROS_with_GPS/src/Analysis scripts/: gps_driver.py  gps_graphing.ipynb
ROS_with_GPS/src/data/: stationary_data.bag  stationary_data.csv  walking_data.bag  walking_data.csv
ROS_with_GPS/src/gps_driver/: CMakeLists.txt  package.xml
ROS_with_GPS/src/gps_driver/launch/: driver.launch
RRT_exploration/: goal_finder.cpp  karto_planner.cpp
RRT_exploration/trajectory_planner/: CMakeLists.txt
Track Follower/: annotator.ipynb  sonoma_ros.ipynb
Track Follower/lane_images/: augmented_lane_points.json  lane_points.json
Yo-yo_control_strategies/: yoyo.m  yoyomodel.slx
kalman_filter/: extended_kalman.py  kalman_imu.py  particle_filter.py  unscented_kalman.py
(+2 files in other folders)
